--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
  <!DOCTYPE html>
-<html>
-  <head><title>Success</title></head>
-  <body>
-    <h1>GitHub Pages is working!</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>WalletConnect Test</title>
+  <script src="https://unpkg.com/@walletconnect/web3modal@2.6.2/dist/index.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@6.7.0/dist/ethers.umd.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 80px;
+    }
+    button {
+      padding: 12px 24px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    #status {
+      margin-top: 20px;
+      padding: 10px;
+      font-size: 16px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Connect Your Wallet</h1>
+  <button id="connectBtn">Connect Wallet</button>
+  <div id="status">🔴 Not Connected</div>
+
+  <script>
+    const projectId = "ff2db6544a529027450c74a34fc4fb74"; // your WalletConnect Project ID
+
+    const { Web3Modal } = window.WalletConnectWeb3Modal;
+
+    const web3Modal = new Web3Modal({
+      projectId,
+      walletConnectVersion: 2,
+      defaultChain: {
+        id: 56, // BSC Mainnet
+        rpcUrl: "https://bsc-dataseed.binance.org/"
+      },
+      themeMode: "light"
+    });
+
+    const connectBtn = document.getElementById("connectBtn");
+    const status = document.getElementById("status");
+
+    connectBtn.addEventListener("click", async () => {
+      try {
+        const provider = await web3Modal.connect();
+        const ethersProvider = new ethers.BrowserProvider(provider);
+        const signer = await ethersProvider.getSigner();
+        const address = await signer.getAddress();
+
+        status.textContent = `✅ Connected: ${address.slice(0, 6)}...${address.slice(-4)}`;
+        status.style.color = "green";
+      } catch (err) {
+        console.error(err);
+        status.textContent = `❌ Error: ${err.message}`;
+        status.style.color = "red";
+      }
+    });
+  </script>
+
+</body>
 </html>
